--- a/Group_Project/templates/home.html
+++ b/Group_Project/templates/home.html
@@ -10,5 +10,6 @@
 <br>
 <br>
 <p><a href="{{  url_for('team') }}" class="btn btn-primary btn-lg">Team Members</a></p>
+<p><a href="{{  url_for('translate') }}" class="btn btn-primary btn-lg">Translator</a></p>
 </body>
 </html>
