--- a/Group_Project/templates/team.html
+++ b/Group_Project/templates/team.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>team</title>
+    <title>Software Engineering</title>
 </head>
 <body>
 <h2>Team Members</h2>
@@ -24,4 +24,5 @@
 <br>
 <br>
 <p><a href="{{  url_for('home') }}" class="btn btn-primary btn-lg">Home</a></p>
+<p><a href="{{  url_for('translate') }}" class="btn btn-primary btn-lg">Translator</a></p>
 </html>
