--- a/Group_Project/templates/translate.html
+++ b/Group_Project/templates/translate.html
@@ -17,7 +17,9 @@
 </form>
 <br>
 Transcript:
-<p>{{ text }}</p>
+<p>{{ oldtext }}</p>
+Translation:
+<p>{{ newtext }}</p>
 Confidence:
 <p>{{ confidence }}</p>
 <br>
