Changes made 3/9/20 Anthony Centrone HTML: layout.html added as a general template for all pages to follow (header and footer).
CSS: static directory created to store CSS templates. style.css created to make style changes to the website.

Python: wtf.py dropdown menu added to the form for users to select target language to translate to.

app.py target language variable is now set to the users input from the dropdown menu on the translate page

--- a/Group_Project/templates/home.html
+++ b/Group_Project/templates/home.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8">
     <title>Software Engineering</title>
 </head>
-<body>
+
+{% extends "layout.html" %}
+{% block content %}
+<div class="about">
 <h2>CEN 4020 Software Engineering Group Project</h2>
 <br>
 <br>
 <br>
-<p><a href="{{  url_for('team') }}" class="btn btn-primary btn-lg">Team Members</a></p>
-<p><a href="{{  url_for('translate') }}" class="btn btn-primary btn-lg">Translator</a></p>
-</body>
+
+
 </html>
+
+</div>
+{% endblock %}
