--- a/Group_Project/templates/team.html
+++ b/Group_Project/templates/team.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <title>Software Engineering</title>
 </head>
-<body>
+
+{% extends "layout.html" %}
+{% block content %}
 <h2>Team Members</h2>
 <p>
     James Keifer Hudson
     <br>
     Sabrina Pinera
     <br>
-    AJ Centrone
+    Anthony Centrone
     <br>
     Diego Castro
     <br>
@@ -19,10 +21,11 @@
     <br>
     Abby Mortenson
 </p>
-</body>
 <br>
 <br>
 <br>
-<p><a href="{{  url_for('home') }}" class="btn btn-primary btn-lg">Home</a></p>
-<p><a href="{{  url_for('translate') }}" class="btn btn-primary btn-lg">Translator</a></p>
+
 </html>
+
+
+{% endblock %}
