--- a/Group_Project/static/css/style.css
+++ b/Group_Project/static/css/style.css
@@ -16,6 +16,7 @@ header {
 
 body {
   font-family: 'montserrat';
+  font-color: black;
   margin: 0;
   padding: 0;
   background-color: white;
@@ -40,6 +41,7 @@ h2 {
 
 p {
     font-family: 'montserrat';
+    font-color: black;
     font-weight: 100;
     font-size: 16px;
     text-align: center;
