Changes made 3/9/20 Anthony Centrone HTML: layout.html added as a general template for all pages to follow (header and footer).
CSS: static directory created to store CSS templates. style.css created to make style changes to the website.

Python: wtf.py dropdown menu added to the form for users to select target language to translate to.

app.py target language variable is now set to the users input from the dropdown menu on the translate page

--- a/Group_Project/static/css/style.css
+++ b/Group_Project/static/css/style.css
@@ -27,7 +27,7 @@ h1 {
   font-family: 'montserrat';
   font-weight: 100;
   font-size: 42px;
-  color: black;
+  font-color: black;
   text-align: center;
 }
 
@@ -41,8 +41,8 @@ h2 {
 
 p {
     font-family: 'montserrat';
-    font-color: black;
-    font-weight: 100;
+    font-color: #00000;
+    font-weight: 200;
     font-size: 16px;
     text-align: center;
     margin-left: 0px;
@@ -107,14 +107,4 @@ select {
 {
   margin:0
     text-align: center;
-}
-
-p
-{
-  color:#fff;
-  font-family: 'montserrat'
-  font-size:18px;
-  text-align: center;
-  margin-top:5px;
-  letter-spacing:2px
 }
