--- a/Group_Project/templates/team.html
+++ b/Group_Project/templates/team.html
@@ -8,7 +8,8 @@
 {% extends "layout.html" %}
 {% block content %}
 <h2>Team Members</h2>
-<p>
+<body>
+    <p>
     James Keifer Hudson
     <br>
     Sabrina Pinera
@@ -20,7 +21,8 @@
     Daniel Jamsheedy
     <br>
     Abby Mortenson
-</p>
+    </p>
+</body>
 <br>
 <br>
 <br>
