--- a/Group_Project/templates/layout.html
+++ b/Group_Project/templates/layout.html
@@ -33,11 +33,13 @@
       <div class="container">
         <div class="row">
           <div>
-            <p class="copyright-text">Copyright &copy; 2020 All Rights Reserved</a>
+            <p class="copyright-text">Copyright &copy; 2020 All Rights Reserved
             </p>
           </div>
         </div>
       </div>
+    </div>
+   </div>
     </footer>
 
   </body>
