--- a/Group_Project/static/css/style.css
+++ b/Group_Project/static/css/style.css
@@ -1,3 +1,6 @@
+<link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=montserrat">
+
 header {
   background-color: white;
   height: 80px;
